# BricLibs

./: .gitignore  CMakeLists.txt  List.c  List_cstr.h  Readme.md  Spliter.cpp  Spliter.h  main.cpp
examples/: ex_List_cstr.cpp  ex_Spliter.cpp
